--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -6,7 +6,7 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/resources"/>
-        <dependent-module deploy-path="/" handle="module:/overlay/prj/tutoriel-web-spring-pouiller?includes=D:\Donnees\eclipse\eclipseworkspace_neon\tutoriel-web-spring-pouiller-overlay/index_cible.html;D:\Donnees\eclipse\eclipseworkspace_neon\tutoriel-web-spring-pouiller-overlay/cerbere-prod.4.3.3.jar&amp;excludes=index.html">
+        <dependent-module deploy-path="/" handle="module:/overlay/var/M2_REPO/?unpackFolder=target/m2e-wtp/overlays&amp;includes=**/**&amp;excludes=index.html">
             <dependency-type>consumes</dependency-type>
         </dependent-module>
         <dependent-module deploy-path="/" handle="module:/overlay/slf/?includes=**/**&amp;excludes=META-INF/MANIFEST.MF">
